Fix dynamic input model loading Attribute validation on input-model, item-label, and tick-property Tested on IE8

--- a/angular-multi-select.css
+++ b/angular-multi-select.css
@@ -122,3 +122,7 @@
 .multiSelect .line {   
     margin-bottom: 15px;
 }
+
+.multiSelect .helperButton + .helperButton  {
+    margin-left: 5px;
+}
